
@startuml

title SystemMonitor class diagram

class SystemMonitor

interface ISystemMonitorSender
interface ISystemMonitorReciver

class SystemMonitorReader
class SystemMonitorDataReaderBase
class SystemMonitorDataReaderLinux
class SystemMonitorDataReaderSamsung
class SystemMonitorCommunicator
class SystemMonitorReciver

SystemMonitorReciver -down-|> ISystemMonitorReciver

SystemMonitorReader -up-* SystemMonitor
SystemMonitorSender -up-* SystemMonitor
SystemMonitorReciver -up-* SystemMonitor

SystemMonitorDataReaderBase -up-> SystemMonitorReader
SystemMonitorDataReaderLinux -up-|> SystemMonitorDataReaderBase
SystemMonitorDataReaderSamsung -up-|> SystemMonitorDataReaderBase

ISystemMonitorSender -left-> SystemMonitorReader
SystemMonitorSender -left-|> ISystemMonitorSender
SystemMonitorSender -down-> SystemMonitorCommunicator

SystemMonitorCommunicator *-right- ISystemMonitorReciver

@enduml